[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "0.1.0"
description = "Command line task manager with upcoming task filtering."
readme = "README.md"
authors = [
  {name = "Example Developer"}
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
task-manager = "task_manager.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
